--- a/docroot/themes/iucn_who/less/theme/assessments.less
+++ b/docroot/themes/iucn_who/less/theme/assessments.less
@@ -800,9 +800,10 @@ body.page-node-type-site {
       right: 0;
       transition: opacity .2s;
       z-index: 1;
+      display: none;
     }
     &:hover, &:focus, &:active {
-      .collapse, .collapsing { opacity: 1; }
+      .collapse, .collapsing { opacity: 1; display: block; }
     }
     .field--item a {
       .light-link();
